rtl menuitem spacing fix

--- a/src/assets/sass/layout/menu/_rtl_menu.scss
+++ b/src/assets/sass/layout/menu/_rtl_menu.scss
@@ -22,6 +22,11 @@
                                 margin-left: 0;
                                 margin-right: auto;
                             }
+
+                            .layout-menuitem-text {
+                                margin-right: .75rem;
+                                margin-left: 0;
+                            }
                         }
 
                         > ul {
